# RaceQuant

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Makefile  README.md  TASK_PLAN.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: backtests.py  features.py  odds.py  predictions.py  racing.py  router.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 0001_initial_schema.py
backend/app/quant/backtesting/: __init__.py  engine.py
backend/app/quant/features/: __init__.py  engine.py
backend/app/quant/models/: __init__.py  baseline.py
backend/app/services/: backtest_repository.py  hkjc_repository.py  odds_repository.py  prediction_repository.py
backend/tests/: test_backtesting_engine.py  test_baseline_model.py  test_features_api.py  test_features_engine.py  test_historical_scrape_worker.py  test_hkjc_scraper.py  test_legacy_odds_audit.py  test_local_data_build_script.py  test_models.py  test_odds_migration_script.py  test_racing_api.py  test_scraper_scheduler.py  test_stage5_api.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: betting_rules.md  data_dictionary.md  data_pipeline.md  data_quality_report.md  data_source_boundaries.md  development-guidelines.md  legacy_horse_odds_migration_result.md  legacy_horse_odds_structure.md  modeling_pipeline.md  naming_conventions.md  odds_data_migration.md  schema_mapping.md  scraping_plan.md
frontend/: eslint.config.js  index.html  (+5 more)
(+83 files in other folders)
